--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
     
     
 <H1>So he im hridhan singh jasrotia and i like to play with my friends </H1>
+<a href="https://www.youtube.com/@Cool-c6w"> Go to this link for a cool yt channel!!!!!</a>
+My best friends are diyan , luke , logan , alica , connor , and dhruv
+This was made in 2024
 </body>
 </html>
