--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
 <a href="https://www.youtube.com/@Cool-c6w"> Go to this link for a cool yt channel!!!!!</a>
 My best friends are diyan , luke , logan , alica , connor , and dhruv
 This was made in 2024
+<div>Email Hridhansinghjasrotia@gmail.com Fortnite Hmm_j playstaion Hmm-j</div>
 </body>
 </html>
